更新项目配置，添加sbt插件和构建设置，优化VSCode配置
Signed-off-by: Aurorabili <aurorabili@outlook.com>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,7 @@
       // class with the same name
       "buildTarget": "root-test",
       "jvmOptions": [
-        "-Dspark.master=local[*]"
+        "-Dspark.master=local[*]",
       ]
     }
   ]
